Add contacts management feature with improved admin pages
- Added admin contacts page with ID, separate date/time columns, and combined subject & message
- Updated contacts to use sequential IDs (1, 2, 3...) instead of database IDs
- Changed status from dropdown to clickable toggle (unread/read)
- Updated users and visits pages to use sequential IDs
- Optimized table column widths for full-screen display
- Shortened code in admin-contacts.html for better maintainability
- Added contacts routes and model on backend
- Updated port from 5000 to 5001 across all files
- Fixed auth.js to centralize authentication logic
- Updated all admin pages to include Contacts link in navigation

--- a/frontend/admin/admin-properties.html
+++ b/frontend/admin/admin-properties.html
@@ -95,6 +95,7 @@
                 <li><a href="admin-properties.html" class="active">Properties</a></li>
                 <li><a href="admin-users.html">Users</a></li>
                 <li><a href="admin-visits.html">Visits</a></li>
+                <li><a href="admin-contacts.html">Contacts</a></li>
                 <li><a href="#" id="logout-btn">Logout</a></li>
               </ul>
 
