--- a/frontend/admin/admin-dashboard.html
+++ b/frontend/admin/admin-dashboard.html
@@ -89,6 +89,7 @@
                 <li><a href="admin-properties.html">Properties</a></li>
                 <li><a href="admin-users.html">Users</a></li>
                 <li><a href="admin-visits.html">Visits</a></li>
+                <li><a href="admin-contacts.html">Contacts</a></li>
                 <li><a href="#" id="logout-btn">Logout</a></li>
               </ul>
 
@@ -147,6 +148,17 @@
             <i class="fa fa-calendar-check fa-2x mb-3 text-warning"></i>
             <h5>Total Scheduled Visits</h5>
             <h2 id="total-visits" class="mt-2">
+              <span class="spinner-border spinner-border-sm"></span>
+            </h2>
+          </div>
+        </div>
+
+        <!-- Total Contacts -->
+        <div class="col-lg-4 col-md-6">
+          <div class="p-4 bg-light border rounded shadow-sm text-center">
+            <i class="fa fa-envelope fa-2x mb-3 text-info"></i>
+            <h5>Contact Messages</h5>
+            <h2 id="total-contacts" class="mt-2">
               <span class="spinner-border spinner-border-sm"></span>
             </h2>
           </div>
@@ -225,6 +237,7 @@
         document.getElementById("total-users").textContent = stats.users || 0;
         document.getElementById("total-properties").textContent = totalProperties;
         document.getElementById("total-visits").textContent = stats.visits || 0;
+        document.getElementById("total-contacts").textContent = stats.contacts || 0;
       } catch (error) {
         console.error('Failed to load stats:', error);
         // Still show local properties count on error
@@ -232,6 +245,7 @@
         document.getElementById("total-users").textContent = 'Error';
         document.getElementById("total-properties").textContent = localPropertiesCount;
         document.getElementById("total-visits").textContent = 'Error';
+        document.getElementById("total-contacts").textContent = 'Error';
       }
 
       // Logout handler
