--- a/frontend/contact.html
+++ b/frontend/contact.html
@@ -78,7 +78,7 @@
                       <li id="nav-login-item"><a href="#" id="nav-login-link">Login</a></li>
                       <li id="nav-register-item"><a href="#" id="nav-register-link">Register</a></li>
                       <li id="nav-logout-item" style="display:none;"><a href="#" id="nav-logout-link">Logout</a></li>
-                      <li><a href="#"><i class="fa fa-calendar"></i> Schedule a visit</a></li>
+                      <li><a href="#" id="nav-schedule-link"><i class="fa fa-calendar"></i> Schedule a visit</a></li>
                   </ul>   
                     <a class='menu-trigger'>
                         <span>Menu</span>
@@ -103,7 +103,7 @@
           <form id="auth-form">
             <div class="mb-3" id="auth-name-group" style="display:none;">
               <label for="auth-name" class="form-label">Full Name</label>
-              <input type="text" class="form-control" id="auth-name" placeholder="Your full name">
+              <input type="text" class="form-control" id="auth-name" placeholder="Your full name" required>
             </div>
             <div class="mb-3">
               <label for="auth-email" class="form-label">Email address</label>
@@ -270,6 +270,46 @@
   <script src="assets/js/counter.js"></script>
   <script src="assets/js/custom.js"></script>
   <script src="assets/js/auth.js"></script>
+
+  <script>
+    // Contact form submission
+    document.getElementById('contact-form').addEventListener('submit', async function(e) {
+      e.preventDefault();
+      
+      const submitBtn = document.getElementById('form-submit');
+      const formData = {
+        name: document.getElementById('name').value,
+        email: document.getElementById('email').value,
+        subject: document.getElementById('subject').value,
+        message: document.getElementById('message').value
+      };
+
+      submitBtn.disabled = true;
+      submitBtn.textContent = 'Sending...';
+
+      try {
+        const response = await fetch('http://localhost:5001/api/contacts', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify(formData)
+        });
+
+        const data = await response.json();
+
+        if (response.ok) {
+          alert(data.message);
+          this.reset();
+        } else {
+          alert(data.message || 'Failed to send message');
+        }
+      } catch (error) {
+        alert('Network error. Please try again.');
+      } finally {
+        submitBtn.disabled = false;
+        submitBtn.textContent = 'Send Message';
+      }
+    });
+  </script>
 
   </body>
 </html>
